replace javapacakger with jpackager